# Procedural-Engine-v2

./: .gitignore  AGENTS.md  BIOME_COLOR_IMPLEMENTATION.md  CI_FIX_SUMMARY.md  CLAUDE.md  ENGINE_REFERENCE.md  LICENSE  MANIFEST.in  ProceduralEngine.spec  README.md  TEST_RESULTS.md  behavior_tree.py  conftest.py  data_loader.py  engine.py  game_api.py  game_commands.py  game_runner.py  graphics_bridge.py  main.py  physics.py  plan.md  player_controller.py  pyproject.toml  requirements.txt  seed_registry.py  setup.py  test_console.py  test_cpp_graphics.py  test_cpp_materials.py  test_cpp_seed_registry.py  test_engine.py  test_frame_timing.py  test_game_api.py  test_game_runner.py  test_graphics_bridge.py  test_mesh_generation.py  test_physics_terrain_collision.py  test_seed_registry.py  test_seed_sweeper.py
.github/workflows/: ci.yml  ci.yml.disabled  release.yml
Legacy/: plan.md
Legacy/docs/: FIX_SUMMARY.md  FRAME_RATE_LIMITING.md  IMPLEMENTATION_COMPLETE.md  TEST_RESULTS.md
Legacy/modules/: commands.py  console.py  engine.py  game_runner.py  graphics_bridge.py  materials.py  physics.py  props.py  terrain.py  ui_system.py  world.py
Legacy/tests/: test_behavior_tree.py  test_commands.py  test_cpp_engine.py  test_cpp_physics.py  test_cpp_props.py  test_cpp_terrain.py  test_engine.py  test_engine_determinism.py  test_game_commands.py  test_graphics_bridge.py  test_hot_reload.py  test_physics.py  test_physics_3d.py  test_player_controller.py  test_props.py  test_ui_system.py
archive/: run_e2e_headless.py
build-ui/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/: CMakeLists.txt  CMakeLists.txt.backup  engine.cpp  game_manager.cpp  game_manager.h  graphics.cpp  graphics.h  launcher.cpp  materials.cpp  materials.h  physics.cpp  physics.h  props.cpp  props.h  seed_registry.cpp  seed_registry.h  terrain.cpp  terrain.h
data/items/: items.json  recipes.json  resource_drops.json
data/npcs/: village_npcs.json
data/quests/: village_quests.json
docs/: DISTRIBUTION.md  next_steps_plan.md  remediation_report.md
examples/: biome_colors.py  frame_timing.py
procedural_engine.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
procengine/: __init__.py
procengine/agents/: __init__.py
procengine/commands/: __init__.py  console.py
procengine/commands/handlers/: __init__.py  game_commands.py
procengine/core/: __init__.py
procengine/game/: __init__.py  behavior_tree.py  data_loader.py  game_api.py  game_runner.py  harvesting.py  player_controller.py  ui_system.py
procengine/graphics/: __init__.py  graphics_bridge.py
procengine/managers/: __init__.py  game_manager.py
procengine/physics/: __init__.py  bodies.py  collision.py  heightfield.py
procengine/utils/: __init__.py  seed_sweeper.py
procengine/world/: __init__.py  chunk.py  creature_templates.py  materials.py  props.py  terrain.py  world.py
scripts/: build_standalone.bat  build_standalone.sh  package_steam.sh
tests/: conftest.py
tests/integration/: test_biome_colors.py  test_cpp_engine.py  test_cpp_game_manager.py  test_cpp_graphics.py  test_cpp_materials.py  test_cpp_props.py  test_cpp_seed_registry.py  test_cpp_terrain.py  test_world.py
tests/unit/: test_behavior_tree.py  test_chunk_system.py  test_commands.py  test_console.py  test_crafting.py  test_creature_templates.py  test_data_loader.py  test_engine.py  test_engine_determinism.py  test_game_api.py  test_game_commands.py  test_game_manager.py  test_game_runner.py  test_graphics_bridge.py  test_harvesting.py  test_hot_reload.py  test_materials.py  test_physics.py  test_physics_3d.py  test_physics_terrain_collision.py  test_player_controller.py  test_props.py  test_seed_registry.py  test_seed_sweeper.py  test_terrain.py  test_ui_system.py
